# alloy-ci-template

./: Cargo.toml  README.md
.github/workflows/: ci.yml
crates/example/: Cargo.toml
crates/example/src/: lib.rs  main.rs
scripts/: check_no_std.sh
